Make sure the rules for left-sidebar are wrapped in a media query

--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -21,8 +21,14 @@
 
 .left-sidebar {
 
-	.content-area {
-		float: right;
-		margin-right: 0;
+	@include media ($tablet-portrait) {
+		.content-area {
+			float: right;
+			margin-right: 0;
+		}
+
+		.primary-sidebar {
+			float: left;
+		}
 	}
 }
